argocd/external-services/requestrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-svc-requestrr
spec:
  type: ExternalName
  externalName: truenas.bowmans.site
  ports:
    - port: 4545
