argocd/external-services/requestrr/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ext-ingress-route-requestrr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`requestrr.bowmans.site`)
      kind: Rule
      services:
      - name: ext-svc-requestrr
        port: 6767
  tls:
    secretName: ext-cert-requestrr
